Committer: sato hitoshi <sato-h-ac@t2a006162.(none)>
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   bin/tsudoop-sub
	modified:   conf/tsudoop.sh
	modified:   share/hadoop-env-t2.sh
	modified:   share/hdfs-site-t2.xml
	modified:   share/mapred-site-t2.xml